samba: fix favicon and page title

--- a/samba/data/public/index.html
+++ b/samba/data/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Tor Snowflake Proxy</title>
+    <title>Samba</title>
     <style>
         /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
         html {
@@ -292,7 +292,7 @@
             margin: 0;
         }
     </style>
-    <link rel="shortcut icon" type="image/jpg" href="favicon.png" />
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 </head>
 
 <body>
@@ -301,7 +301,7 @@
             <img class="app-icon" src="samba.svg" width="256" height="256" />
             <div class="app-details">
                 <span class="app-status success">&#9679; Running</span>
-                <h1 class="app-name">Tor Snowflake Proxy</h1>
+                <h1 class="app-name">Samba</h1>
             </div>
         </div>
         <p class="text-muted">
