samba: apply change requests
Co-authored-by: sharknoon <frank.josua@gmail.com>

--- a/samba/data/public/index.html
+++ b/samba/data/public/index.html
@@ -232,12 +232,6 @@
             margin: auto;
         }
 
-        .container.terminal-container {
-            background-color: #101010;
-            border-radius: 30px;
-            margin-bottom: 40px;
-        }
-
         .app-icon {
             border-radius: 20px;
         }
@@ -267,30 +261,6 @@
             font-weight: bold;
             margin: 10px 0 0 0;
         }
-
-        #terminal>iframe {
-            border: 0px !important;
-            position: relative !important;
-            height: 70vh !important;
-            width: 100% !important;
-            max-width: 1360px !important;
-        }
-
-        /* Firefox iframe-ception fix */
-
-        body.iframe {
-            background-color: #101010;
-        }
-
-        body.iframe .app-container {
-            display: none;
-        }
-
-        body.iframe .container.terminal-container {
-            border-radius: 0;
-            padding: 0;
-            margin: 0;
-        }
     </style>
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 </head>
@@ -306,46 +276,57 @@
         </div>
         <p class="text-muted">
             <hr />
-        <h2>How to Connect to the Umbrel SMB Server</h1>
-            <p>Follow these steps to connect to the Umbrel SMB Server:</p>
+        <h2>How to Connect to the Umbrel SMB Server</h2>
+        <p>Follow these steps to connect to the Umbrel SMB Server:</p>
 
-            <h3>For Windows Users</h3>
-            <ol>
-                <li>Open <strong>File Explorer</strong>.</li>
-                <li>In the address bar, type <code>\\umbrel.local</code> and press <strong>Enter</strong>.</li>
-                <li>When prompted, enter the username: <code>umbrel</code> and the password: <code>changeme</code>.</li>
-                <li>You should now see your <code>/storage</code> directory.</li>
-            </ol>
+        <h3>For Windows Users</h3>
+        <ol>
+            <li>Open <strong>File Explorer</strong>.</li>
+            <li>In the address bar, type <code>\\umbrel.local</code> and press <strong>Enter</strong>.</li>
+            <li>When prompted, enter the your credentials (check Umbrel dashboard -> Samba -> Right-Click -> Show
+                default
+                credentials).
+            </li>
+            <li>You should now see all of your umbrelOS data like downloads, movies, music, etc...</li>
+        </ol>
 
-            <h3>For macOS Users</h3>
-            <ol>
-                <li>Open <strong>Finder</strong>.</li>
-                <li>In the menu bar, click on <strong>Go</strong> and then select <strong>Connect to Server...</strong>.
-                </li>
-                <li>In the Server Address field, type <code>smb://umbrel.local</code> and click
-                    <strong>Connect</strong>.
-                </li>
-                <li>When prompted, enter the username: <code>umbrel</code> and the password: <code>changeme</code>.</li>
-                <li>You should now see your <code>/storage</code> directory.</li>
-            </ol>
+        <h3>For macOS Users</h3>
+        <ol>
+            <li>Open <strong>Finder</strong>.</li>
+            <li>In the menu bar, click on <strong>Go</strong> and then select <strong>Connect to Server...</strong>.
+            </li>
+            <li>In the Server Address field, type <code>smb://umbrel.local</code> and click
+                <strong>Connect</strong>.
+            </li>
+            <li>When prompted, enter the your credentials (check Umbrel dashboard -> Samba -> Right-Click -> Show
+                default
+                credentials).
+            </li>
+            <li>You should now see all of your umbrelOS data like downloads, movies, music, etc...</li>
+        </ol>
 
-            <h3>For Linux Users</h3>
-            <ol>
-                <li>Open a file manager (such as <strong>Nautilus</strong> or <strong>Dolphin</strong>).</li>
-                <li>In the address bar, type <code>smb://umbrel.local</code> and press <strong>Enter</strong>.</li>
-                <li>When prompted, enter the username: <code>umbrel</code> and the password: <code>changeme</code>.</li>
-                <li>You should now see your <code>/storage</code> directory.</li>
-            </ol>
+        <h3>For Linux Users</h3>
+        <ol>
+            <li>Open a file manager (such as <strong>Nautilus</strong> or <strong>Dolphin</strong>).</li>
+            <li>In the address bar, type <code>smb://umbrel.local</code> and press <strong>Enter</strong>.</li>
+            <li>When prompted, enter the your credentials (check Umbrel dashboard -> Samba -> Right-Click -> Show
+                default
+                credentials).
+            </li>
+            <li>You should now see all of your umbrelOS data like downloads, movies, music, etc...</li>
+        </ol>
 
-            <p>If you encounter any issues, make sure that the Umbrel SMB Server is running and that you have the
-                correct
-                permissions to access it. Additionally, ensure that your firewall or antivirus software is not blocking
-                the
-                connection.</p>
+        <p>If you encounter any issues, make sure that the Umbrel SMB Server is running and that you have the
+            correct
+            permissions to access it. Additionally, ensure that your firewall or antivirus software is not blocking
+            the
+            connection.</p>
 
-            <p>For more detailed configuration information, <a href="smb.conf">click here to check your config
-                    file</a>.</p>
-            </p>
+        <p>For more detailed configuration information, <a href="smb.conf">click here to check your config file</a>.
+            can change the config by opening the terminal (Settings -> Advanced Settings -> Terminal) and manually
+            modifying the smb file (e.g. with nano umbrel/app-data/samba/data/smb.conf).
+        </p>
+        </p>
     </section>
 </body>
 
