samba: fix typo on homepage
Co-authored-by: sharknoon <frank.josua@gmail.com>

--- a/samba/data/public/index.html
+++ b/samba/data/public/index.html
@@ -323,7 +323,7 @@
             connection.</p>
 
         <p>For more detailed configuration information, <a href="smb.conf">click here to check your config file</a>.
-            can change the config by opening the terminal (Settings -> Advanced Settings -> Terminal) and manually
+            You can change the config by opening the terminal (Settings -> Advanced Settings -> Terminal) and manually
             modifying the smb file (e.g. with nano umbrel/app-data/samba/data/smb.conf).
         </p>
         </p>
